Se decide y se agregan estilos principales de la página

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -1,10 +1,30 @@
+:root{
+    --main-color: #ef5f33;
+    --transparent-background: rgba(0, 0, 0, 0.7);
+    --main-font: 'Roboto Mono', 'Courier New', Courier, monospace;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: var(--main-color);
+    font-family: var(--main-font);
+}
+
 header{
     display: flex;
     justify-content: space-between;
     padding: 2rem;
-    text-align: center;
-    align-items: center;
     font-size: 1.25rem;
+    font-weight: 600;
+    min-width: 100%;
+    background-color: var(--transparent-background);
+}
+
+header a{
+    color: var(--main-color);
 }
 
 header a:hover{
@@ -12,7 +32,11 @@ header a:hover{
 }
 
 footer{
+    padding: 1rem;
     text-align: center;
+    min-width: 100%;
+    font-size: 1.125rem;
+    background-color: var(--transparent-background);
 }
 
 .nav-items-container{
