Se agregan items del formulario con un estilo base

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -34,7 +34,8 @@ header a{
     color: var(--main-color);
 }
 
-header a:hover{
+header a:hover,
+.fa-bars:hover{
     cursor: pointer;
     color: var(--main-color-hover);
     transition: var(--hover-transition);
