--- a/CSS/subscribe.css
+++ b/CSS/subscribe.css
@@ -7,3 +7,16 @@ footer{
     position: fixed;
     bottom: 0;
 }
+
+.subscribe-main{
+    display: flex;
+    border-radius: 10px;
+    max-width: 800px;
+    margin: auto;
+    height: fit-content;
+}
+
+.subscribe-main h1{
+    font-size: 1.75rem;
+    padding: 1rem;
+}
