--- a/CSS/form.css
+++ b/CSS/form.css
@@ -14,17 +14,24 @@
 form{
     background-color: var(--transparent-background);
     padding: var(--padding-1);
-    margin-bottom: 50px;
+    margin-bottom: 60px;
+    margin-top: 10px;
     border-radius: 10px;
 }
 
-input{
+input,
+select,
+option{
+    font-family: var(--main-font);
+    font-weight: bold;
+    border-radius: var(--radius-50);
+}
+
+input[type=text]{
     border: unset;
     background-color: var(--input-background);
     color: black;
     padding: var(--padding-1);
-    border-radius: var(--radius-50);
-    width: 250px;
     margin: .5rem .25rem;
 }
 
@@ -35,7 +42,18 @@ button{
     border-radius: var(--radius-50);
     padding: var(--padding-1) 2rem;
     cursor: pointer;
-    margin: 1rem;
+}
+
+select{
+    padding: .5rem;
+    margin-top: .5rem;
+}
+
+textarea{
+    min-height: 150px;
+    margin-top: 1rem;
+    padding: .5rem;
+    resize: none;
 }
 
 .row-container{
@@ -45,10 +63,12 @@ button{
 }
 
 .input-container{
+    min-width: 50%;
     display: flex;
     flex-direction: column;
     text-align:start;
     padding: .25rem;
+    justify-content: center;
 }
 
 .input-container label{
@@ -56,6 +76,19 @@ button{
     color: var(--error-label);
     max-width: fit-content;
     
+}
+
+.input-container fieldset{
+    padding: .25rem;
+}
+
+.alone{
+    width: 100%;
+    margin: 1rem 0;
+}
+
+.alone > label{
+    margin: 0;
 }
 
 .visible{
