--- a/CSS/form.css
+++ b/CSS/form.css
@@ -70,7 +70,7 @@ label{
 }
 
 .input-container{
-    min-width: 50%;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     text-align:start;
