--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -66,3 +66,20 @@
     from {top: -100px; opacity: 0}
     to {top: 50%; opacity: 1}
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--text-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-color);
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main-color-hover);
+}
